Created the ViewportSize Dependency Property on the BitmapGridControl. Created the ContentVpSizeOffsetAndScaleProperty Dependency Property on the PanAndZoomControl.

--- a/src/MSetExplorer/MapDisplay/Controls/MapSectionDisplayControl.xaml
+++ b/src/MSetExplorer/MapDisplay/Controls/MapSectionDisplayControl.xaml
@@ -12,6 +12,7 @@
 
             <local:BitmapGridControl
                 x:Name="BitmapGridControl1"
+                ViewportSize="{Binding ViewportSize, Mode=TwoWay}"
                 BitmapGridImageSource="{Binding ImageSource}"
                 ImageOffset="{Binding ImageOffset}"
             />
