--- a/src/MSetExplorer/ColorBandSetHistogram/ColorBandSetHistogramControl.xaml
+++ b/src/MSetExplorer/ColorBandSetHistogram/ColorBandSetHistogramControl.xaml
@@ -31,7 +31,9 @@
                             x:Name="PanAndZoomControl1"
                             UnscaledExtent="{Binding UnscaledExtent}"
                             ContentScale="{Binding DisplayZoom}"
-                            MinContentScale="{Binding MinimumDisplayZoom}"
+                            MinContentScale="{Binding MinimumDisplayZoom}" 
+                            ContentVpSizeOffsetAndScale="{Binding ViewportSizePositionAndScale, Mode=TwoWay}"
+
                             >
 
                             <local:HistogramDisplayControl
