--- a/src/MSetExplorer/ColorBandSetHistogram/NotUsed/HistogramPlotControlNotUsed.xaml
+++ b/src/MSetExplorer/ColorBandSetHistogram/NotUsed/HistogramPlotControlNotUsed.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="MSetExplorer.HistogramPlotControl"
+﻿<UserControl x:Class="MSetExplorer.ColorBandSetHistogram.NotUsed.HistogramPlotControl"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -7,6 +7,8 @@
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid>
-            
+        <Canvas x:Name="MainCanvas" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Background="Transparent" Width="1000" Height="230">
+            <Image x:Name="MainImage" />
+        </Canvas>
     </Grid>
 </UserControl>
