--- a/src/MSetExplorer/Themes/Generic.xaml
+++ b/src/MSetExplorer/Themes/Generic.xaml
@@ -1,5 +1,6 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                    xmlns:ScottPlot="clr-namespace:ScottPlot;assembly=ScottPlot.WPF"                           
                     xmlns:local="clr-namespace:MSetExplorer">
 
     
@@ -34,7 +35,6 @@
                                     <Image x:Name="MainImage" />
                                 </Canvas>
                             </ContentPresenter.Content>
-
                         </ContentPresenter>
 
                     </Border>
@@ -56,7 +56,39 @@
                                     <Image x:Name="MainImage" />
                                 </Canvas>
                             </ContentPresenter.Content>
+                        </ContentPresenter>
 
+                    </Border>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
+
+    <Style TargetType="{x:Type local:HistogramPlotCustomControl}">
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="{x:Type local:HistogramPlotCustomControl}">
+                    <Border BorderThickness="0" BorderBrush="DarkSlateBlue">
+
+                        <ContentPresenter x:Name="PART_Content" HorizontalAlignment="Center" VerticalAlignment="Center">
+                            <ContentPresenter.Content>
+                                <Grid>
+                                    
+                                    <Grid.RowDefinitions>
+                                        <RowDefinition Height="200"/>
+                                        <RowDefinition Height="40"/>
+                                    </Grid.RowDefinitions>
+
+                                    <Border Grid.Row="0" BorderThickness="0.75" BorderBrush="Black">
+                                        <ScottPlot:WpfPlot x:Name="WpfPlot1"/>
+                                    </Border>
+
+                                    <Canvas Grid.Row="1" x:Name="MainCanvas" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Background="Transparent">
+                                        <Image x:Name="MainImage" />
+                                    </Canvas>
+                                    
+                                </Grid>
+                            </ContentPresenter.Content>
                         </ContentPresenter>
 
                     </Border>
