Continue to work on the PanAndZoom control. Attempting to reduce code required in the hosting Window's code behind module.

--- a/src/MSetExplorer/MapDisplay/Controls/MapSectionPzControl.xaml
+++ b/src/MSetExplorer/MapDisplay/Controls/MapSectionPzControl.xaml
@@ -20,8 +20,8 @@
                 <local:PanAndZoomControl
                     x:Name="PanAndZoomControl1"
                     UnscaledExtent="{Binding UnscaledExtent}"
-                    ContentScale="{Binding DisplayZoom}"
-                    MinContentScale="{Binding MinimumDisplayZoom}"
+                    ContentScale="{Binding DisplayZoom, Mode=TwoWay}"
+                    MinContentScale="{Binding MinimumDisplayZoom, Mode=TwoWay}"
                     ContentVpSizeOffsetAndScale="{Binding ViewportSizePositionAndScale, Mode=TwoWay}"
                     >
 
