Reverted back to using the MapSectionPzControl's code behind to handle the DisplaySettingsInitialized, Viewport changed and ContentOffset changed events.
Created the GetUnScaledDisplayPosition on the BoundedMapArea class.

--- a/src/MSetExplorer/MapDisplay/Controls/MapSectionPzControl.xaml
+++ b/src/MSetExplorer/MapDisplay/Controls/MapSectionPzControl.xaml
@@ -17,15 +17,22 @@
                 HorizontalScrollBarVisibility="Auto"
                 >
 
+                <!--<local:PanAndZoomControl
+                    x:Name="PanAndZoomControl1"
+                    UnscaledExtent="{Binding UnscaledExtent}"
+                    ContentPositionX="{Binding DisplayPositionX, Mode=TwoWay}"
+                    ContentPositionY="{Binding DisplayPositionY, Mode=TwoWay}"
+                    ContentScale="{Binding DisplayZoom, Mode=TwoWay}"
+                    MinContentScale="{Binding MinimumDisplayZoom, Mode=TwoWay}"
+                    ViewportSizeOffsetAndScale="{Binding ViewportSizePositionAndScale, Mode=TwoWay}"
+                    
+                    >-->
+
                 <local:PanAndZoomControl
                     x:Name="PanAndZoomControl1"
                     UnscaledExtent="{Binding UnscaledExtent}"
-                    ContentOffsetX="{Binding DisplayPositionX, Mode=TwoWay}"
-                    ContentOffsetY="{Binding DisplayPositionY, Mode=TwoWay}"
                     ContentScale="{Binding DisplayZoom, Mode=TwoWay}"
                     MinContentScale="{Binding MinimumDisplayZoom, Mode=TwoWay}"
-                    ContentVpSizeOffsetAndScale="{Binding ViewportSizePositionAndScale, Mode=TwoWay}"
-                    
                     >
 
                     <local:BitmapGridControl
