The control being pan and zoomed, for example the BitmapGridControl, is now responsible for raising ViewportSizeChanged events instead of having these event come from the PanAndZoomControl.

--- a/src/MSetExplorer/MapDisplay/Controls/MapSectionPzControl.xaml
+++ b/src/MSetExplorer/MapDisplay/Controls/MapSectionPzControl.xaml
@@ -86,6 +86,7 @@
 
                     <local:BitmapGridControl
                         x:Name="BitmapGridControl1"
+                        ViewportSize="{Binding ViewportSize, Mode=TwoWay}"
                         BitmapGridImageSource="{Binding ImageSource, Mode=OneWay}"
                         ImageOffset="{Binding ImageOffset, Mode=OneWay}"
                     />
