Continue to work on centering the MapDisplay when the Scale factor is low to allow all content to shown.

--- a/src/MSetExplorer/MapDisplay/Controls/MapSectionPzControl.xaml
+++ b/src/MSetExplorer/MapDisplay/Controls/MapSectionPzControl.xaml
@@ -63,7 +63,7 @@
                 x:Name="ScrollViewer1"
                 CanContentScroll="True"
                 VerticalScrollBarVisibility="Hidden"
-                HorizontalScrollBarVisibility="Auto"
+                HorizontalScrollBarVisibility="Hidden"
                 >
 
                 <!--<local:PanAndZoomControl
@@ -86,7 +86,7 @@
 
                     <local:BitmapGridControl
                         x:Name="BitmapGridControl1"
-                        ViewportSize="{Binding LogicalViewportSize, Mode=TwoWay}"
+                        
                         BitmapGridImageSource="{Binding ImageSource, Mode=OneWay}"
                         ImageOffset="{Binding ImageOffset, Mode=OneWay}"
                     />
@@ -98,6 +98,8 @@
                     
                 
                     ViewportSize="{Binding ViewportSize, Mode=TwoWay}"
+                
+                    ViewportSize="{Binding LogicalViewportSize, Mode=TwoWay}"
                 -->
 
 
