Updated the BitmapGridControl to not set the canvas size during arrange.

--- a/src/MSetExplorer/MapDisplay/Controls/MapSectionPzControl.xaml
+++ b/src/MSetExplorer/MapDisplay/Controls/MapSectionPzControl.xaml
@@ -64,6 +64,7 @@
                 CanContentScroll="True"
                 VerticalScrollBarVisibility="Hidden"
                 HorizontalScrollBarVisibility="Hidden"
+                IsDeferredScrollingEnabled="True"
                 >
 
                 <!--<local:PanAndZoomControl
