Continue to work on MapSectionDisplayViewModel and the ZoomSlider

--- a/src/MSetExplorer/MapDisplay/Controls/MapSectionPzControl.xaml
+++ b/src/MSetExplorer/MapDisplay/Controls/MapSectionPzControl.xaml
@@ -64,7 +64,7 @@
                 CanContentScroll="True"
                 VerticalScrollBarVisibility="Hidden"
                 HorizontalScrollBarVisibility="Hidden"
-                IsDeferredScrollingEnabled="True"
+                IsDeferredScrollingEnabled="False"
                 >
 
                 <!--<local:PanAndZoomControl
